tests/impl-corpus/corpus/accept/impl_trait.pdx
// Issue #658: paideia-as Phase 4 m9-004 — impl blocks
// AC 2: trait impl for a concrete type parses correctly

impl Eq for i32 {
  fn eq(a: i32, b: i32) -> bool { true }
}
